done not validate

--- a/index.html
+++ b/index.html
@@ -1,186 +1,312 @@
 <!DOCTYPE html>
-<html lang="en">
+<!-- saved from url=(0088)https://preview.erilisdesign.com/html/lana/text-wide-global-youtube-background.html#home -->
+<html lang="en" class=" cssanimations csstransitions csstransforms">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Victoria</title>
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+	<title>Victoria Village</title>
 
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="description" content="">
+	<meta name="keywords" content="">
+	<meta name="author" content="">
 
-    <!-- css component  ------------------------------------------------------->
-    <link rel="stylesheet" href="./assest/fontawesome/font-awesome.min.css">
-    <link rel="stylesheet" href="./css/main.css">
-    <link rel="stylesheet" href="./css/pageloader.css">
-    <!-- end css component  --------------------------------------------------->
+	<link rel="stylesheet" href="./assest/libs/bootstrap/bootstrap.min.css">
+	<link rel="stylesheet" href="./assest/libs/fullpage/jquery.fullpage.min.css">
+	<link rel="stylesheet" href="./css/main.css">
+
 
 </head>
 
-<body>
+<body class="layout-wide layout-mobile" cz-shortcut-listen="true">
+	<span class="line_1"></span>
+	<span class="line_2"></span>
+	<span class="line_3"></span>
+	<span class="line_4"></span>
 
-    <div class="page-loader" id="page-loader">
-        <div>
-            <div class="icon ion-spin"></div>
-        </div>
-    </div>
+	<div id="preloader" class="preloader preloader-dark" style="display: none;">
+		<div class="loader-status">
+			<div class="circle-side"></div>
+		</div>
+	</div>
 
-    <header class="page-header navbar page-header-alpha scrolled-white menu-right topmenu-right">
+	<div class="site-container">
 
-        <button class="navbar-toggler site-menu-icon" id="navMenuIcon">
-            <span class="menu-icon menu-icon-random">
-                <span class="bars">
-                    <span class="bar1"></span>
-                    <span class="bar2"></span>
-                    <span class="bar3"></span>
-                </span>
-            </span>
-        </button>
+		<!-- Site header -->
+		<header class="site-header">
+			<a class="logo" href="#">
+				<img src="./assest/images/logo.png" alt="Victoria Village">
+			</a>
+			<div class="nav-toggle navigationToggle"></div>
+			<div class="menu-nav" id="navigation">
+				<div class="menu-text">
+					<span class="text">menu</span>
+					<figure class="img closeMenu"><img src="./assest/images/menu_close.png" alt=""></figure>
+				</div>
+				<ul class="menu-collapse">
+					<li data-menuanchor="section01">
+						<a href="#section01">Trang chủ</a>
+					</li>
+					<li data-menuanchor="section02">
+						<a href="#section02">Giới thiệu</a>
+					</li>
+					<li data-menuanchor="section03">
+						<a href="#section03">Vị trí</a>
+					</li>
+					<li data-menuanchor="section04">
+						<a href="#section04">Tiện ích nội khu</a>
+					</li>
+					<li data-menuanchor="section05">
+						<a href="#section05">Mặt bằng tổng thể</a>
+					</li>
+					<li data-menuanchor="section06">
+						<a href="#section06">Liên hệ</a>
+					</li>
+				</ul>
+			</div>
+		</header>
 
-        <a class="navbar-brand" href="#home">
-            <span class="logo">
-                <img class="light-logo" src="http://items.lifeinsys.com/item/portolex/resources/img/logo-white.png"
-                    alt="Logo">
-            </span>
-        </a>
+		<!-- Page content -->
+		<div class="fullpage" data-navigation="true">
 
-        <div class="all-menu-wrapper" id="navbarMenu">
-            <nav class="navbar-mainmenu">
-                <ul class="navbar-nav mr-auto mr-auto-my">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="index.html#home">Home
-                            <span class="sr-only">(current)</span>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="gallery.html">Gallery</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="item.html">Item</a>
-                    </li>
-                </ul>
-            </nav>
-        </div>
-    </header>
+			<section class="section section_01 section_contact" data-anchor="section01" data-tooltip="Trang chủ">
+				<div class="content">
+					<figure class="image_mb">
+						<img src="./assest/images/mb_section_01.jpg" alt="Căn hộ ngay trung tâm hành chánh quận 2">
+					</figure>
 
-    <div class="page-cover">
-        <div class="cover-bg bg-img"
-            data-image-src="http://items.lifeinsys.com/item/portolex/resources/img/bg-default.jpg"></div>
+					<h2 class="heading"><img src="./assest/images/heading01.png" alt="Căn hộ ngay trung tâm hành chánh quận 2"></h2>
+					<figure class="line_center">
+						<img src="./assest/images/line-heading.png" alt="Căn hộ ngay trung tâm hành chánh quận 2">
+					</figure>
+					<form>
+						<label>Đăng kí tư vấn miễn phí</label>
+						<div class="form-group">
+							<input type="text" placeholder="Họ và tên (*)" class="form-control">
+						</div>
+						<div class="form-group">
+							<input type="text" placeholder="Số điện thoại (*)" class="form-control">
+						</div>
+						<div class="form-group">
+							<input type="text" placeholder="Email (*)" class="form-control">
+						</div>
+						<div class="form-group">
+							<input type="text" placeholder="Địa chỉ" class="form-control">
+						</div>
+					</form>
+					<div class="submit">
+						<button class="btn_submit" disabled>nhận báo giá dự án</button>
+					</div>
+				</div>
+			</section>
 
-        <div class="cover-bg-mask bg-color" data-bgcolor="rgba(2, 3, 10, 0.7)"></div>
-    </div>
+			<section class="section section_02" data-anchor="section02" data-tooltip="Giới thiệu">
+				<div class="content">
+					<figure class="image_mb">
+						<img src="./assest/images/mb_section_02.jpg" alt="Tâm điểm kết nối thịnh vượng">
+					</figure>
+					<h2 class="heading"><img src="./assest/images/heading02.png" alt="Tâm điểm kết nối thịnh vượng"></h2>
+					<ul class="description">
+						<li>
+							Liền kề với đô thị Thủ Thiêm, cách trung tâm thành phố chỉ vài phút thông qua hệ thồng giao thông hoàn thiện.
+						</li>
+						<li>
+							Victoria Village được ra đời từ sự kết hợp giữa những ý tưởng về một "Phố Âu" hiện đại giữa lòng Sài Gòn.
+						</li>
+						<li>
+							Nơi đây cũng được thiên nhiên ưu đãi ban tặng cho không gian trong lành với mảng xanh rộng lớn, kề cận bên sông Sài Gòn đem lại vượng khí tài lộc cho gia chủ.
+						</li>
+					</ul>
+				</div>
+			</section>
 
-    <main class="page-main page-fullpage main-anim" id="mainpage">
+			<section class="section section_03" data-anchor="section03" data-tooltip="Vị trí">
+				<div class="content">
+					<figure class="image_mb">
+						<img src="./assest/images/mb_section_03.jpg" alt="Tâm điểm kết nối">
+					</figure>
+					<h2 class="heading"><img src="./assest/images/heading03.png" alt="Tâm điểm kết nối"></h2>
+					<div class="description">
+						Victoria Village tọa lạc tại mặt tiền đường Đồng Văn Cống, liền ngay trục huyết mạch Mai Chí Thọ, thừa hưởng trọn vẹn giá trị của khu Đông TP.HCM cộng hưởng ưu thế kết nối với quần thể tiện ích lân cận, Victoria Village sẽ sớm là khu dân cư văn minh, sầm uất và có giá trị gia tăng bền vững.
+					</div>
+					<ul class="list_ultilities">
+						<li>
+							<figure class="image">
+								<img src="./assest/images/section03_icon01.png" alt="">
+							</figure>
+							<div class="details">
+								<span class="text">UBND quận 2  - <b>3 phút</b></span>
+								<span class="text">Chi cục thuế quận 2  - <b>3 phút</b></span>
+								<span class="text">Điện lực quận 2  - <b>3 phút</b></span>
+							</div>
+						</li>
+						<li>
+							<figure class="image">
+								<img src="./assest/images/section03_icon02.png" alt="">
+							</figure>
+							<div class="details">
+								<span class="text">Trường cấp 1 Trương Thế Vinh - <b>3 phút</b></span>
+								<span class="text">Trường cấp 2 Lương Định Của - <b>3 phút</b></span>
+								<span class="text">Trường Quốc Tế AIS - <b>5 phút</b></span>
+							</div>
+						</li>
+						<li>
+							<figure class="image">
+								<img src="./assest/images/section03_icon03.png" alt="">
+							</figure>
+							<div class="details">
+								<span class="text">Mega Market - <b>15 phút</b></span>
+								<span class="text">Mega Mall Thảo Điền - <b>15 phút</b></span>
+								<span class="text">Vincom Mega Mall - <b>15 phút</b></span>
+							</div>
+						</li>
+						<li>
+							<figure class="image">
+								<img src="./assest/images/section03_icon04.png" alt="">
+							</figure>
+							<div class="details">
+								<span class="text">Khu liên hợp TDTT Rạch Chiếc - <b>15 phút</b></span>
+								<span class="text">Khu đô thị Thủ Thiêm - <b>15 phút</b></span>
+								<span class="text">Trung tâm Quận 1  - <b>20 phút</b></span>
+							</div>
+						</li>
+					</ul>
+				</div>
+			</section>
 
-        <div class="section section-01 fp-auto-height-responsive" data-section="vic01">
-            <div class="section-wrapper anim">
-                <!-- title -->
-                <div class="section-title">
-                    <h2 class="display-4 display-title anim-2 mb-32">Home</h2>
-                </div>
+			<section class="section section_04" data-anchor="section04" data-tooltip="Tiện ích nội khu">
+				<div class="content">
+					<div class="content--left selectUltilites">
+						<div class="item other">
+							<figure>
+								<img class="image" src="./assest/images/section04_img01.jpg" alt="Phòng Gym">
+								<h3 class="name">Phòng Gym</h3>
+							</figure>
+							<figure>
+								<img class="image" src="./assest/images/section04_img02.jpg" alt="Khu vui chơi trẻ em">
+								<h3 class="name pl">Khu vui chơi trẻ em</h3>
+							</figure>
+						</div>  
+						<div class="item">
+							<figure>
+								<img class="image" src="./assest/images/section04_img03.png" alt="Phối cảnh khuôn viên hồ bơi">
+								<h3 class="name">Phối cảnh khuôn viên hồ bơi</h3>
+							</figure>
+						</div>  
+						<div class="item">
+							<figure>
+								<img class="image" src="./assest/images/section04_img04.jpg" alt="Căn hộ thương mại-ShopHouse">
+								<h3 class="name pl">Căn hộ thương mại-ShopHouse</h3>
+							</figure>
+						</div>  
+						<div class="item">
+							<figure>
+								<img class="image" src="./assest/images/section04_img05.jpg" alt="Công viên nội khu">
+								<h3 class="name">Công viên nội khu</h3>
+							</figure>
+						</div>  
+					</div>
+					<div class="content--right">
+						<h2 class="heading">
+							<img class="pc" src="./assest/images/heading04.png" alt="Tâm điểm kết nối">
+							<img class="tablet" src="./assest/images/mb_heading04.png" alt="Tâm điểm kết nối">
+						</h2>
+						<figure class="line_center">
+							<img src="./assest/images/line-heading.png" alt="Căn hộ ngay trung tâm hành chánh quận 2">
+						</figure>
+						<div class="description">
+							Hệ thống tiện ích nội khu hiện đại, đẳng cấp đậm nét phong cách Châu Âu, mang đến trải nghiệm đa dạng cho gia chủ
+						</div>
+						<ul class="list_text">
+							<li>Công viên Hoàng Gia 5.000m2</li>
+							<li>Hồ bơi tràn 70m2 chuẩn Olympic</li>
+							<li>Khu vực chơi trẻ em đầy màu sắc</li>
+							<li>Phòng gym thời thượng</li>
+							<li>Chuỗi dịch vụ thương mại, ẩm thực cao cấp</li>
+						</ul>
+					</div>
+				</div>
+			</section>
 
-                <!-- content -->
-                <!-- end of content -->
-            </div>
-        </div>
+			<section class="section section_05" data-anchor="section05" data-tooltip="Mặt bằng tổng thể">
+				<div class="mobile">
+					<h2 class="heading">
+						<img src="./assest/images/mb_heading04.png" alt="Mặt bằng tổng thể">
+					</h2>
+					<figure>
+						<img src="./assest/images/mb_section_05.jpg" alt="Mặt bằng tổng thể">
+					</figure>
+				</div>
+			</section>
 
-        <div class="section section-02 fp-auto-height-responsive" data-section="vic02">
-            <div class="section-wrapper anim">
-                <!-- title -->
-                <div class="section-title">
-                    <h2 class="display-4 display-title anim-2 mb-32">About Us</h2>
-                </div>
+			<section class="section section_06 section_contact" data-anchor="section06" data-tooltip="Liên hệ">
+				<div class="content">
+					<h2 class="heading"><img src="./assest/images/heading01.png" alt="Căn hộ ngay trung tâm hành chánh quận 2"></h2>
+					<figure class="line_center">
+						<img src="./assest/images/line-heading.png" alt="Căn hộ ngay trung tâm hành chánh quận 2">
+					</figure>
+					<form>
+						<label>Đăng kí tư vấn miễn phí</label>
+						<div class="form-group">
+							<input type="text" placeholder="Họ và tên (*)" class="form-control">
+						</div>
+						<div class="form-group">
+							<input type="text" placeholder="Số điện thoại (*)" class="form-control">
+						</div>
+						<div class="form-group">
+							<input type="text" placeholder="Email (*)" class="form-control">
+						</div>
+						<div class="form-group">
+							<input type="text" placeholder="Địa chỉ" class="form-control">
+						</div>
+					</form>
+					<div class="submit">
+						<button class="btn_submit" disabled>nhận báo giá dự án</button>
+					</div>
+				</div>
+			</section>
 
-                <!-- content -->
-                <!-- end of content -->
+		</div>
 
-            </div>
-        </div>
+		<!-- Modal -->
+		<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+			<div class="modal-dialog" role="document">
+			<div class="modal-content">
+				<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+					<img src="./assest/images/modal_close.png" alt="">
+				</button>
+				<div class="modal-body"></div>
+			</div>
+			</div>
+		</div>
 
-        <div class="section section-03 fp-auto-height-responsive " data-section="vic03">
-            <div class="section-wrapper twoside anim">
-                <!-- title -->
-                <div class="section-title">
-                    <h2 class="display-4 display-title anim-2 mb-32">Services</h2>
-                </div>
+		<!-- Modal -->
+		<!-- <div class="modal fade" id="#exampleModal" tabindex="-1" role="dialog" aria-hidden="true">
+			<div class="modal-dialog" role="document">
+			<div class="modal-content">
+				<button type="button" class="close" data-dismiss="modal" aria-label="Close"><img src="./assest/images/modal_close.png" alt="">
+				</button>
+				<div class="modal-body"></div>
+			</div>
+			</div> -->
+		</div>
 
-                <!-- content -->
-                <!-- end of content -->
+		<!-- Site footer -->
+		<footer class="site-footer footer-content-light footer-mobile-content-light">
+			<a href="#section01" class="site-footer__button btn_register"></a>
+			<a href="#" class="site-footer__button btn_fb"></a>
+			<a href="#" class="site-footer__button btn_download"></a>
+			<a href="#section01" class="site-footer__button btn_toTop"></a>
+		</footer>
 
-            </div>
-        </div>
+	</div>
 
-        <div class="section section-04 fp-auto-height-responsive " data-section="vic04">
-            <div class="section-wrapper anim">
-                <!-- title -->
-                <div class="section-title">
-                    <h2 class="display-4 display-title anim-2 mb-32">Team</h2>
-                </div>
+	<script src="./assest/libs/jquery/jquery.min.js"></script>
+	<script src="./assest/libs/bootstrap/bootstrap.js"></script>
+	<script src="./assest/libs/fullpage/jquery.fullpage.min.js"></script>
 
-                <!-- content -->
-                <!-- end of content -->
+	<script src="./js/main.js"></script>
 
-            </div>
-        </div>
-
-        <div class="section section-05 fp-auto-height-responsive " data-section="vic05">
-            <div class="section-wrapper anim">
-                <!-- title -->
-                <div class="section-title">
-                    <h2 class="display-4 display-title anim-2 mb-32">END</h2>
-                </div>
-
-                <!-- content -->
-                <!-- end of content -->
-
-            </div>
-        </div>
-
-    </main>
-
-    <footer id="site-footer" class="page-footer">
-        <!-- Right content -->
-        <div class="footer-right">
-            <p class="note">Created by
-                <a href="https://themeforest.net/user/lifeinsys/portfolio">
-                    <span class="marked"> LifeInSYS</span>
-                </a>
-            </p>
-            <ul class="social">
-                <li>
-                    <a href="">
-                        <i class="icon fa fa-facebook"></i>
-                    </a>
-                </li>
-                <li>
-                    <a href="">
-                        <i class="icon fa fa-twitter"></i>
-                    </a>
-                </li>
-                <li>
-                    <a href="">
-                        <i class="icon fa fa-linkedin"></i>
-                    </a>
-                </li>
-                <li>
-                    <a href="">
-                        <i class="icon fa fa-instagram"></i>
-                    </a>
-                </li>
-            </ul>
-        </div>
-    </footer>
-    <!-- END OF site footer -->
-
-    <!-- libs  ---------------------------------------------------------------->
-    <script src="./js/jquery-2.2.4.min.js"></script>
-    <script src="./js/all.js"></script>
-    <script src="./js/main.js"></script>
-    <!-- end libs  ------------------------------------------------------------>
-
-
-    <script>
-
-    </script>
 
 </body>
 
