edit name folder assets

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 	<meta name="keywords" content="">
 	<meta name="author" content="">
 
-	<link rel="stylesheet" href="./assest/libs/bootstrap/bootstrap.min.css">
-	<link rel="stylesheet" href="./assest/libs/fullpage/jquery.fullpage.min.css">
+	<link rel="stylesheet" href="./assets/libs/bootstrap/bootstrap.min.css">
+	<link rel="stylesheet" href="./assets/libs/fullpage/jquery.fullpage.min.css">
 	<link rel="stylesheet" href="./css/main.css">
 
 
@@ -35,13 +35,13 @@
 		<!-- Site header -->
 		<header class="site-header">
 			<a class="logo" href="#">
-				<img src="./assest/images/logo.png" alt="Victoria Village">
+				<img src="./assets/images/logo.png" alt="Victoria Village">
 			</a>
 			<div class="nav-toggle navigationToggle"></div>
 			<div class="menu-nav" id="navigation">
 				<div class="menu-text">
 					<span class="text">menu</span>
-					<figure class="img closeMenu"><img src="./assest/images/menu_close.png" alt=""></figure>
+					<figure class="img closeMenu"><img src="./assets/images/menu_close.png" alt=""></figure>
 				</div>
 				<ul class="menu-collapse">
 					<li data-menuanchor="section01">
@@ -72,12 +72,12 @@
 			<section class="section section_01 section_contact" data-anchor="section01" data-tooltip="Trang chủ">
 				<div class="content">
 					<figure class="image_mb">
-						<img src="./assest/images/mb_section_01.jpg" alt="Căn hộ ngay trung tâm hành chánh quận 2">
+						<img src="./assets/images/mb_section_01.jpg" alt="Căn hộ ngay trung tâm hành chánh quận 2">
 					</figure>
 
-					<h2 class="heading"><img src="./assest/images/heading01.png" alt="Căn hộ ngay trung tâm hành chánh quận 2"></h2>
+					<h2 class="heading"><img src="./assets/images/heading01.png" alt="Căn hộ ngay trung tâm hành chánh quận 2"></h2>
 					<figure class="line_center">
-						<img src="./assest/images/line-heading.png" alt="Căn hộ ngay trung tâm hành chánh quận 2">
+						<img src="./assets/images/line-heading.png" alt="Căn hộ ngay trung tâm hành chánh quận 2">
 					</figure>
 					<form data-id="form01">
 						<label>Đăng kí tư vấn miễn phí</label>
@@ -103,9 +103,9 @@
 			<section class="section section_02" data-anchor="section02" data-tooltip="Giới thiệu">
 				<div class="content">
 					<figure class="image_mb">
-						<img src="./assest/images/mb_section_02.jpg" alt="Tâm điểm kết nối thịnh vượng">
+						<img src="./assets/images/mb_section_02.jpg" alt="Tâm điểm kết nối thịnh vượng">
 					</figure>
-					<h2 class="heading"><img src="./assest/images/heading02.png" alt="Tâm điểm kết nối thịnh vượng"></h2>
+					<h2 class="heading"><img src="./assets/images/heading02.png" alt="Tâm điểm kết nối thịnh vượng"></h2>
 					<ul class="description">
 						<li>
 							Liền kề với đô thị Thủ Thiêm, cách trung tâm thành phố chỉ vài phút thông qua hệ thồng giao thông hoàn thiện.
@@ -123,16 +123,16 @@
 			<section class="section section_03" data-anchor="section03" data-tooltip="Vị trí">
 				<div class="content">
 					<figure class="image_mb">
-						<img src="./assest/images/mb_section_03.jpg" alt="Tâm điểm kết nối">
+						<img src="./assets/images/mb_section_03.jpg" alt="Tâm điểm kết nối">
 					</figure>
-					<h2 class="heading"><img src="./assest/images/heading03.png" alt="Tâm điểm kết nối"></h2>
+					<h2 class="heading"><img src="./assets/images/heading03.png" alt="Tâm điểm kết nối"></h2>
 					<div class="description">
 						Victoria Village tọa lạc tại mặt tiền đường Đồng Văn Cống, liền ngay trục huyết mạch Mai Chí Thọ, thừa hưởng trọn vẹn giá trị của khu Đông TP.HCM cộng hưởng ưu thế kết nối với quần thể tiện ích lân cận, Victoria Village sẽ sớm là khu dân cư văn minh, sầm uất và có giá trị gia tăng bền vững.
 					</div>
 					<ul class="list_ultilities">
 						<li>
 							<figure class="image">
-								<img src="./assest/images/section03_icon01.png" alt="">
+								<img src="./assets/images/section03_icon01.png" alt="">
 							</figure>
 							<div class="details">
 								<span class="text">UBND quận 2  - <b>3 phút</b></span>
@@ -142,7 +142,7 @@
 						</li>
 						<li>
 							<figure class="image">
-								<img src="./assest/images/section03_icon02.png" alt="">
+								<img src="./assets/images/section03_icon02.png" alt="">
 							</figure>
 							<div class="details">
 								<span class="text">Trường cấp 1 Trương Thế Vinh - <b>3 phút</b></span>
@@ -152,7 +152,7 @@
 						</li>
 						<li>
 							<figure class="image">
-								<img src="./assest/images/section03_icon03.png" alt="">
+								<img src="./assets/images/section03_icon03.png" alt="">
 							</figure>
 							<div class="details">
 								<span class="text">Mega Market - <b>15 phút</b></span>
@@ -162,7 +162,7 @@
 						</li>
 						<li>
 							<figure class="image">
-								<img src="./assest/images/section03_icon04.png" alt="">
+								<img src="./assets/images/section03_icon04.png" alt="">
 							</figure>
 							<div class="details">
 								<span class="text">Khu liên hợp TDTT Rạch Chiếc - <b>15 phút</b></span>
@@ -179,40 +179,40 @@
 					<div class="content--left selectUltilites">
 						<div class="item other">
 							<figure>
-								<img class="image" src="./assest/images/section04_img01.jpg" alt="Phòng Gym">
+								<img class="image" src="./assets/images/section04_img01.jpg" alt="Phòng Gym">
 								<h3 class="name">Phòng Gym</h3>
 							</figure>
 							<figure>
-								<img class="image" src="./assest/images/section04_img02.jpg" alt="Khu vui chơi trẻ em">
+								<img class="image" src="./assets/images/section04_img02.jpg" alt="Khu vui chơi trẻ em">
 								<h3 class="name pl">Khu vui chơi trẻ em</h3>
 							</figure>
 						</div>  
 						<div class="item">
 							<figure>
-								<img class="image" src="./assest/images/section04_img03.png" alt="Phối cảnh khuôn viên hồ bơi">
+								<img class="image" src="./assets/images/section04_img03.png" alt="Phối cảnh khuôn viên hồ bơi">
 								<h3 class="name">Phối cảnh khuôn viên hồ bơi</h3>
 							</figure>
 						</div>  
 						<div class="item">
 							<figure>
-								<img class="image" src="./assest/images/section04_img04.jpg" alt="Căn hộ thương mại-ShopHouse">
+								<img class="image" src="./assets/images/section04_img04.jpg" alt="Căn hộ thương mại-ShopHouse">
 								<h3 class="name pl">Căn hộ thương mại-ShopHouse</h3>
 							</figure>
 						</div>  
 						<div class="item">
 							<figure>
-								<img class="image" src="./assest/images/section04_img05.jpg" alt="Công viên nội khu">
+								<img class="image" src="./assets/images/section04_img05.jpg" alt="Công viên nội khu">
 								<h3 class="name">Công viên nội khu</h3>
 							</figure>
 						</div>  
 					</div>
 					<div class="content--right">
 						<h2 class="heading">
-							<img class="pc" src="./assest/images/heading04.png" alt="Tâm điểm kết nối">
-							<img class="tablet" src="./assest/images/mb_heading04.png" alt="Tâm điểm kết nối">
+							<img class="pc" src="./assets/images/heading04.png" alt="Tâm điểm kết nối">
+							<img class="tablet" src="./assets/images/mb_heading04.png" alt="Tâm điểm kết nối">
 						</h2>
 						<figure class="line_center">
-							<img src="./assest/images/line-heading.png" alt="Căn hộ ngay trung tâm hành chánh quận 2">
+							<img src="./assets/images/line-heading.png" alt="Căn hộ ngay trung tâm hành chánh quận 2">
 						</figure>
 						<div class="description">
 							Hệ thống tiện ích nội khu hiện đại, đẳng cấp đậm nét phong cách Châu Âu, mang đến trải nghiệm đa dạng cho gia chủ
@@ -231,19 +231,19 @@
 			<section class="section section_05" data-anchor="section05" data-tooltip="Mặt bằng tổng thể">
 				<div class="mobile">
 					<h2 class="heading">
-						<img src="./assest/images/mb_heading04.png" alt="Mặt bằng tổng thể">
+						<img src="./assets/images/mb_heading04.png" alt="Mặt bằng tổng thể">
 					</h2>
 					<figure>
-						<img src="./assest/images/mb_section_05.jpg" alt="Mặt bằng tổng thể">
+						<img src="./assets/images/mb_section_05.jpg" alt="Mặt bằng tổng thể">
 					</figure>
 				</div>
 			</section>
 
 			<section class="section section_06 section_contact" data-anchor="section06" data-tooltip="Liên hệ">
 				<div class="content">
-					<h2 class="heading"><img src="./assest/images/heading01.png" alt="Căn hộ ngay trung tâm hành chánh quận 2"></h2>
+					<h2 class="heading"><img src="./assets/images/heading01.png" alt="Căn hộ ngay trung tâm hành chánh quận 2"></h2>
 					<figure class="line_center">
-						<img src="./assest/images/line-heading.png" alt="Căn hộ ngay trung tâm hành chánh quận 2">
+						<img src="./assets/images/line-heading.png" alt="Căn hộ ngay trung tâm hành chánh quận 2">
 					</figure>
 					<form data-id="form02">
 						<label>Đăng kí tư vấn miễn phí</label>
@@ -273,7 +273,7 @@
 			<div class="modal-dialog" role="document">
 			<div class="modal-content">
 				<button type="button" class="close" data-dismiss="modal" aria-label="Close">
-					<img src="./assest/images/modal_close.png" alt="">
+					<img src="./assets/images/modal_close.png" alt="">
 				</button>
 				<div class="modal-body"></div>
 			</div>
@@ -284,7 +284,7 @@
 		<!-- <div class="modal fade" id="#exampleModal" tabindex="-1" role="dialog" aria-hidden="true">
 			<div class="modal-dialog" role="document">
 			<div class="modal-content">
-				<button type="button" class="close" data-dismiss="modal" aria-label="Close"><img src="./assest/images/modal_close.png" alt="">
+				<button type="button" class="close" data-dismiss="modal" aria-label="Close"><img src="./assets/images/modal_close.png" alt="">
 				</button>
 				<div class="modal-body"></div>
 			</div>
@@ -301,9 +301,9 @@
 
 	</div>
 
-	<script src="./assest/libs/jquery/jquery.min.js"></script>
-	<script src="./assest/libs/bootstrap/bootstrap.js"></script>
-	<script src="./assest/libs/fullpage/jquery.fullpage.min.js"></script>
+	<script src="./assets/libs/jquery/jquery.min.js"></script>
+	<script src="./assets/libs/bootstrap/bootstrap.js"></script>
+	<script src="./assets/libs/fullpage/jquery.fullpage.min.js"></script>
 
 	<script src="./js/main.js"></script>
 
