--- a/index.html
+++ b/index.html
@@ -281,13 +281,39 @@
 		</div>
 
 
-		<div class="modal fade" id="Thanks" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+		<div class="modal fade modal-message" id="Thanks" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
 			<div class="modal-dialog" role="document">
 			<div class="modal-content">
 				<button type="button" class="close" data-dismiss="modal" aria-label="Close">
 					<img src="./assets/images/modal_close.png" alt="">
 				</button>
-				<div class="modal-body">Cảm ơn bạn đã đăng ký</div>
+				<div class="modal-body">Cám ơn Quý khách đã để lại thông tin. <br/>Nhân viên sẽ liên hệ với
+					Anh Chị trong thời gian sớm nhất có thể.</div>
+			</div>
+			</div>
+		</div>
+
+		<div class="modal fade modal-message" id="modalSubmitFail" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+			<div class="modal-dialog" role="document">
+			<div class="modal-content">
+				<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+					<img src="./assets/images/modal_close.png" alt="">
+				</button>
+				<div class="modal-body">modalSubmitValidate <br>Cám ơn Quý khách đã để lại thông tin. <br/>Nhân viên sẽ liên hệ với
+					Anh Chị trong thời gian sớm nhất có thể.</div>
+			</div>
+			</div>
+		</div>
+
+
+		<div class="modal fade modal-message" id="modalSubmitValidate" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+			<div class="modal-dialog" role="document">
+			<div class="modal-content">
+				<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+					<img src="./assets/images/modal_close.png" alt="">
+				</button>
+				<div class="modal-body">modalSubmitValidate <br>Cám ơn Quý khách đã để lại thông tin. <br/>Nhân viên sẽ liên hệ với
+					Anh Chị trong thời gian sớm nhất có thể.</div>
 			</div>
 			</div>
 		</div>
