feedback full width for heading and imges popup utilities full on modal

--- a/index.html
+++ b/index.html
@@ -178,29 +178,29 @@
 				<div class="content">
 					<div class="content--left selectUltilites">
 						<div class="item other">
-							<figure>
+							<figure href="./assets/images/section04_full_01.jpg">
 								<img class="image" src="./assets/images/section04_img01.jpg" alt="Phòng Gym">
 								<h3 class="name">Phòng Gym</h3>
 							</figure>
-							<figure>
+							<figure href="./assets/images/section04_full_02.jpg">
 								<img class="image" src="./assets/images/section04_img02.jpg" alt="Khu vui chơi trẻ em">
 								<h3 class="name pl">Khu vui chơi trẻ em</h3>
 							</figure>
 						</div>  
 						<div class="item">
-							<figure>
+							<figure href="./assets/images/section04_full_03.jpg">
 								<img class="image" src="./assets/images/section04_img03.png" alt="Phối cảnh khuôn viên hồ bơi">
 								<h3 class="name">Phối cảnh khuôn viên hồ bơi</h3>
 							</figure>
 						</div>  
 						<div class="item">
-							<figure>
+							<figure href="./assets/images/section04_full_04.jpg">
 								<img class="image" src="./assets/images/section04_img04.jpg" alt="Căn hộ thương mại-ShopHouse">
 								<h3 class="name pl">Căn hộ thương mại-ShopHouse</h3>
 							</figure>
 						</div>  
 						<div class="item">
-							<figure>
+							<figure href="./assets/images/section04_full_05.jpg">
 								<img class="image" src="./assets/images/section04_img05.jpg" alt="Công viên nội khu">
 								<h3 class="name">Công viên nội khu</h3>
 							</figure>
