update button register and title section 2

--- a/index.html
+++ b/index.html
@@ -105,7 +105,10 @@
 					<figure class="image_mb">
 						<img src="./assets/images/mb_section_02.jpg" alt="Tâm điểm kết nối thịnh vượng">
 					</figure>
-					<h2 class="heading"><img src="./assets/images/heading02.png" alt="Tâm điểm kết nối thịnh vượng"></h2>
+					<h2 class="heading">
+						<!-- <img src="./assets/images/heading02.png" alt="Tâm điểm kết nối thịnh vượng"> -->
+						<img src="./assets/images/kE THUA.png" alt="Tâm điểm kết nối thịnh vượng">
+					</h2>
 					<ul class="description">
 						<li>
 							Liền kề với đô thị Thủ Thiêm, cách trung tâm thành phố chỉ vài phút thông qua hệ thồng giao thông hoàn thiện.
