add button download on popup

--- a/index.html
+++ b/index.html
@@ -290,8 +290,11 @@
 				<button type="button" class="close" data-dismiss="modal" aria-label="Close">
 					<img src="./assets/images/modal_close.png" alt="">
 				</button>
-				<div class="modal-body">Cám ơn Quý khách đã để lại thông tin. <br/>Nhân viên sẽ liên hệ với
-					Anh Chị trong thời gian sớm nhất có thể.</div>
+				<div class="modal-body">
+					<p>Cám ơn Quý khách đã để lại thông tin. <br/>Nhân viên sẽ liên hệ với
+						Anh Chị trong thời gian sớm nhất có thể.</p>
+					<a href="#" class="btn_downloadInfo">Tải thông tin dự án</a>
+				</div>
 			</div>
 			</div>
 		</div>
